# home_work_7_ads

./: .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yaml
app/: database.py  main.py  model_estimate.py  model_predict.py  models.py  schemas.py  word_list.txt
tests/: test_main.py  test_model_predict.py
