[tool.poetry]
name = "api-antifrod-detection"
version = "0"
description = "ADS_project"
authors = ["Diana Karpova <dikarpova04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
pathlib = "^1.0.1"
pydantic = "^2.4.2"
flake8 = "^6.1.0"
pylint = "^3.0.2"
pytest = "^7.4.3"
python-dotenv = "^1.0.0"
enum34 = "^1.1.10"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
